experimentData/JavaFuzzer/Jadx-detailedExperimentData/errorSamples/recompilation_failures/330/log-1-330.log

Test.java:123: error: incompatible types: possible lossy conversion from float to long
        jArr[i3] = jArr[i3] + 0.275f;
                            ^
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

